feat: refresh all site stats asynchronously
